[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["“gooder08” <“gooder08@yandex.ru”>"]
readme = "README.md"
packages = [{include = "course_work"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
